# UIARecorder

./: .gitignore  AGENTS.md  Generate.ps1  LLM_INTERFACE.md  README.md  Record.ps1  chatbot.py  dummy.txt  example_client.py  input_tools.py  mcp_server.py  prompt.md  pyproject.toml  recorder.py  requirements.txt  screenshot_tool.py  test.py  test_agent.py  uia_dumper.py
.github/: copilot-instructions.md
.github/chatmodes/: UIAutomation.chatmode.md
agent/: common_flow.py  fla_ui_gemini_flow.py  flaui_flow.py  flaui_prompt.md  gemini_flow.py  main_agent.py  prompt.md  py_uiautomation_flow.py  todo.md  uia_dumper.py
csharp/Agent/: Agent.cs  Agent.csproj  Models.cs  flaui_prompt.md
csharp/FlaUI.Gemini/: FlaUI.Gemini.csproj  Program.cs  UiaModels.cs
csharp/Recorder/: App.xaml  App.xaml.cs  ConsoleWindow.xaml  ConsoleWindow.xaml.cs  HighlightWindow.xaml  HighlightWindow.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Recorder.csproj  (+6 more)
dummy_recording/: annotations.json
example/: README.md  example_scenario.json  example_test.py  user_data.csv
fla-ui/: FlaUI.Generated.csproj  prompt.md
player/: logger.py  main_player.py  scenario_runner.py
recorder/: annotator.py  main_recorder.py  media.py  uia.py
recording/: annotations.json  video.avi
tests/: __init__.py  test_agent.py  test_ask_gemini.py  test_gemini_chat_server.py  test_uia_dumper.py
tools/: README.md  ask_gemini.py  correct_gemini_chat.py  gemini_chat.py  gemini_chat_server.py  mcp_server.py  player.py  player_tool.py  recorder.py  recorder_tool.py  uia_dumper.py
(+96 files in other folders)
