[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-agent"
version = "0.1.0"
dependencies = [
    "uiautomation",
    "Pillow",
    "opencv-python",
    "pyautogui",
    "sounddevice",
    "scipy",
    "pynput",
    "imageio",
    "imageio-ffmpeg",
    "numpy",
    "pytest",
    "mock",
    "psutil",
    "google-genai",
    "pydantic",
    "comtypes",
    "colorlog",
]

[tool.setuptools.packages.find]
where = ["."]
